fixed issue with centering on searc-bar on mobile views

--- a/app-movie-db/src/app/components/layout/header/header.component.scss
+++ b/app-movie-db/src/app/components/layout/header/header.component.scss
@@ -32,7 +32,7 @@
         }  
     }
 
-    @media screen and (max-width: 576px){
+    @media screen and (max-width: 632px){
         .header {
             display: block;
             height: fit-content;
@@ -53,9 +53,12 @@
             margin: 0;
         }
 
-        .menu-button {
+        .menu-button, .search-bar {
             display: flex;
             justify-content: center;
+        }
+
+        .menu-button {
             &:hover, &.active {
                 height: auto;
             }
