--- a/app-movie-db/src/app/components/layout/search-bar/search-bar.component.scss
+++ b/app-movie-db/src/app/components/layout/search-bar/search-bar.component.scss
@@ -7,4 +7,8 @@
     #search-icon, button {
         cursor: pointer;
     }
+
+    #search-icon {
+        text-align: center;
+    }
 }
